# ProyectoFinalTLF

./: .gitignore  Makefile  README.md  main.py  motor_regex.py  patrones.py  pyproject.toml
.claude/: settings.local.json
interfaz/: busqueda.py  formulario.py  pruebas.py
proyecto_final_tlf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_formulario.py  test_patrones.py
