[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proyecto_final_tlf"
version = "1.0.0"
description = "Proyecto Final TLF"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0"
]

[project.scripts]
start = "proyecto_final_tlf.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]